Ensure place order button always visible in modal
[https://boclips.zendesk.com/agent/tickets/3076]

--- a/src/components/orderModal/style.module.less
+++ b/src/components/orderModal/style.module.less
@@ -8,7 +8,9 @@
   margin-top: 1rem;
   overflow: auto;
   max-height: 50vh;
-
+  @media screen and (max-height: 900px) {
+    max-height: 20vh;
+  }
   &::-webkit-scrollbar {
     width: 7px;
   }
